removed extra margins on the page - fixed the horizontal scroll bar

--- a/styles/app.css
+++ b/styles/app.css
@@ -24,6 +24,9 @@ h3 {
   letter-spacing: 0.1em;
   color: var(--accent-color);
 }
+.row {
+  margin: 0;
+}
 .portfolio h1 {
   margin-top: 110px;
 }
